fix: some minor changes
